--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "paper": "^0.11.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-icons": "^2.2.5"
+    "react-icons": "^2.2.5",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "node-sass": "^4.5.2",
