--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "grommet": "^1.4.0",
-    "grommet-css": "^1.0.0",
     "immutable": "^3.8.1",
+    "material-ui": "^0.18.1",
     "paper": "^0.11.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-icons": "^2.2.5",
     "react-redux": "^5.0.4",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
   },
   "devDependencies": {
